[package]
name = "unt-rust-ed-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.43", features = [ "parsing", "full", "extra-traits" ] }
quote = "1.0.33"
prettyplease = "0.2.15"
proc-macro2 = "1.0.71"
